--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <title>React App</title>
+        <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     </head>
 <body>
     <div id="app"></div>
