--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
-        <title>React App</title>
+        <title>React Weather App!</title>
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     </head>
 <body>
