--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <html>
     <head>
         <title>React Weather App!</title>
+        <link rel="shortcut icon" href="../favicon.ico">
         <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
     </head>
 <body>
